--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-opencv-python
-numpy
-streamlit
-mediapipe
-tensorflow
-scikit-learn
-pygame
-pyttsx3
+opencv-python-headless==4.8.1.78
+numpy>=1.24.3
+streamlit>=1.28.0
+mediapipe>=0.10.7
+tensorflow>=2.14.0
+scikit-learn>=1.3.0
+pygame>=2.5.2
+pyttsx3>=2.90
+Pillow>=10.0.0
+protobuf>=3.20.0
