--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 opencv-python-headless==4.8.1.78
-numpy>=1.24.3
-streamlit>=1.28.0
-mediapipe>=0.10.7
-tensorflow>=2.14.0
-scikit-learn>=1.3.0
-pygame>=2.5.2
-pyttsx3>=2.90
-Pillow>=10.0.0
-protobuf>=3.20.0
+numpy==2.3.0
+streamlit==1.45.1
+tensorflow==2.15.0
+scikit-learn==1.4.1.post1
+Pillow==10.2.0
+protobuf==4.25.3
+pygame==2.5.2
+pyttsx3==2.90
