--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-streamlit==1.28.0
-onnxruntime==1.16.3
-scikit-learn==1.3.0
-Pillow==10.0.0
-protobuf==4.21.12
-pygame==2.5.2
-pyttsx3==2.90
-mediapipe==0.10.5
+opencv-python-headless
+numpy
+streamlit
+scikit-learn
+Pillow
+pygame
+pyttsx3
+mediapipe-silicon
