--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-opencv-python-headless
-numpy
-streamlit
-scikit-learn
-Pillow
-pygame
-pyttsx3
-mediapipe-silicon
+streamlit==1.31.0
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+scikit-learn==1.4.0
+Pillow==10.1.0
+pygame==2.5.2
+pyttsx3==2.90
+mediapipe==0.10.9
